# pybind-template

./: .gitignore  CMakeLists.txt
scripts/: bind_test.py
src/: pybind_bind.cpp  pybind_test.cpp  pybind_test.h
